feat(runtime): Upgrade Camel runtime to 4.15